# automating-boring-tasks-using-python

./: .gitignore  LICENSE  README.md
accessing-metadata-gitlab/: main.py
apk_download_web/: Facebook Lite_v266.0.0.13.118_apkpure.com.apk  main.py
clipboard_modifier/: main.py  runme.sh
duplicate_image_finder/: pyproject.toml  readme.md
duplicate_image_finder/duplicate_image_finder/: duplicate_finder.py
duplicate_image_finder/template/: index.html
duplicate_image_finder/tests/: test_duplicate_image_finder.py
extract_file_from_folder/: run.py
fb_rm_advertisers_and_businesses/: remove_runner.py
find_word_in_folders/: argument_handler.py  find_word_in_folders.py  folder_walk.py
get_apk_from_device/: main.py
gplay_apk_download_multidex/: LOG.csv  analyze_log.py  apk_multidex.py  requirements.txt  script_apk_download_sha1.py  script_downloader.py
image_in_window_screensaver/: argument_handler.py  bad_practise_global.py  compress_images.py  compressme.sh  custom_log.py  file_walker.py  image_widget.py  main_level_widget.py  main_window.py  readme.md  requirements.txt  runme.sh  top_level_widget.py
iterative_web_search/: main.py
markdown-detail-summary/: main.py  output.html  output.md  source.md  source2.md
note_point_extractor/: __main__.py  main.py  readme.md
pdf_update_checker/: main.py  source.txt  url.txt
pdfs/: add_comment_page.py  add_comment_page.sh  add_comment_page_new.py  requirements.txt
range_batch_downloader/: readme.md  src.py
rename_files/: argument_handler.py  custom_log.py  file_walker.py  rename_files.py  requirements.txt
(+39 files in other folders)
