[tool.poetry]
name = "duplicate_image_finder"
version = "0.1.0"
description = ""
authors = ["Amit <lordamit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
python-magic-bin = "^0.4.14"
Pillow = "^9.1.1"
termcolor = "^1.1.0"
python-magic = "^0.4.27"
types-termcolor = "^1.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
