[tool.poetry]
name = "duplicate_image_finder"
version = "0.1.0"
description = ""
authors = ["Amit <lordamit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
Pillow = "^9.3.0"
termcolor = "^1.1.0"
types-termcolor = "^1.1.4"
pandas = "^1.4.2"
python-magic-bin = "0.4.14"
ImageHash = "^4.2.1"
Flask-Cors = "^3.0.10"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
